feat: Add ExtractionReportWriter for generating JSON and HTML reports
- Implemented ExtractionReportWriter to create reports in JSON and HTML formats.
- Added methods to write reports atomically to prevent data loss.
- Included detailed metrics in the reports, such as scanned, extracted, duplicates, and failures.

feat: Enhance MediaExtractorApplication with configurable parameters

- Introduced properties for thread count, max in-flight tasks, progress interval, and report directory.
- Integrated ExtractionReportWriter into the media extraction process to generate reports after extraction.

feat: Improve MediaExtractorService with duplicate detection and corruption checks

- Added functionality to skip duplicate media files based on SHA-256 hash.
- Implemented checks for corrupted media files before processing.
- Enhanced reporting to include details about duplicates and corrupted files.

feat: Add ProgressReporter for real-time extraction progress logging

- Created ProgressReporter to log extraction progress at configurable intervals.
- Utilized virtual threads for efficient progress reporting without blocking.

test: Add unit tests for ExtractionReportWriter and MediaExtractorService

- Implemented tests for report generation, ensuring correct JSON and HTML output.
- Added tests for duplicate media file handling and corrupted file skipping.
- Verified year extraction logic from EXIF data in photos.